# casanovoutils

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  cli_reference.md  conf.py  datasets.md  faq.md  file_formats.md  getting_started.md  index.md  make.bat
docs/api/: align.md  constants.md  denovoutils.md  main.md  mgfutils.md  mzmlutils.md  preccov.md  residues.md  types.md
src/casanovoutils/: __init__.py  align.py  charge_distribution.py  constants.py  create_datasets.py  datasets.py  denovoutils.py  downsample.py  downsample_spectra.py  evaluate.py  graphloss.py  main.py  mgf_visualization.py  mgfsummarize.py  mgfutils.py  mzmlutils.py  plot-casanovo-loss.py  prec_cov.py  preccov.py  residues.py  summarize_mgf.py  types.py  utils.py
tests/: test_align.py  test_charge_distribution.py  test_create_datasets.py  test_datasets.py  test_denovoutils.py  test_downsample_spectra.py  test_evaluate.py  test_loss.py  test_main.py  test_mgf_visualization.py  test_mgfutils.py  test_mzmlutils.py  test_prec_cov.py  test_preccov.py  test_residues.py  test_summarize_mgf.py  test_utils.py
