[project]
name = "casanovoutils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "gwenneth.straub@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fire>=0.7.1",
    "matplotlib>=3.9.0",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pyteomics>=4.7.5",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.1",
]

[project.scripts]
casanovo-utils = "casanovoutils:main"
mgf-utils = "casanovoutils.mgfutils:main"
downsample-ms = "casanovoutils.downsample:main"
graph-prec-cov = "casanovoutils.preccov:main"
create-datasets = "casanovoutils.create_datasets:main"

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "myst-parser>=3.0",
    "sphinx-book-theme>=1.0",
    "sphinx-autoapi>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "isort>=7.0.0",
    "pytest>=9.0.2",
]
